--- a/AvaloniaApplication1/App.axaml
+++ b/AvaloniaApplication1/App.axaml
@@ -2,10 +2,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="AvaloniaApplication1.App"
              xmlns:local="using:AvaloniaApplication1"
+             xmlns:global="clr-namespace:"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
-    <Application.DataTemplates>
+             <Application.Resources>
+	             <global:ColumnCountConverter x:Key="ColumnCountConverter" />
+             </Application.Resources>
+             <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
 
