--- a/AvaloniaApplication1/Views/Windows/NewBookWindow.axaml
+++ b/AvaloniaApplication1/Views/Windows/NewBookWindow.axaml
@@ -3,16 +3,18 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:AvaloniaApplication1.ViewModels"
+        xmlns:models="clr-namespace:AvaloniaApplication1.Models;assembly=AvaloniaLibraryManagementSystemModels"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="AvaloniaApplication1.Views.Windows.NewBookWindow"
-        Title="NewBookWindow">
+        Title="NewBookWindow"
+        x:DataType="viewModels:MainWindowViewModel">
     
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
         <viewModels:MainWindowViewModel />
     </Design.DataContext>
-    <Grid>
+    <Grid Margin="20 20">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
@@ -31,8 +33,10 @@
         <TextBox Grid.Column="1" Grid.Row="1" x:Name="authorTextBox"/>
 
         <Label Grid.Column="0" Grid.Row="2" Content="Genre Tags:"/>
-        <ListBox Grid.Column="1" Grid.Row="2" x:Name="genreTagsListBox"/>
-
+        <ComboBox SelectedIndex="0" Width="250" MaxDropDownHeight="100" Grid.Column="1" Grid.Row="2" 
+                 x:Name="genreTagsListBox"
+                 ItemsSource="{Binding GenresNames, Mode=OneWay}">
+        </ComboBox>
         <Button Grid.Column="1" Grid.Row="3" Content="Add Book" Click="AddBookButton_Click"/>
     </Grid>
 </Window>
